@@ -1,3 +1,8 @@
+2017-11-14 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCtree_dec.hpp:
+	  Choose Thorup vs. PP+FI+TM per CFG depending on width of decompositions.
+
 2017-11-14 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/mcs51/gen.c,
